--- a/src/admin-table/Table.css
+++ b/src/admin-table/Table.css
@@ -1,4 +1,4 @@
-table,
+/* table,
 th,
 td {
   border-bottom: 2px solid lightgray;
@@ -49,4 +49,4 @@ table {
 .table--footer {
 	display: flex;
 	justify-content: space-between;
-}
+} */
